# sample

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
src/: app.py  conftest.py
src/lib/: README.md  calculate.py
src/lib/tests/: README.md  test_calculate.py
src/sample/: README.md  appcode.py
tests/: README.md  test_sample.py
typings/: README.md
