[tool.poetry]
name = "sample"
version = "0.3.0"
description = "Sample Python application"
authors = ["D Creemer <dcreemer@sfba.social>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^24.4.0"
coverage = {extras = ["toml"], version = "^7.4.4"}
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ruff = "^0.3.5"
safety = "^3.1.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=sample --cov-report html --cov-report term"

[tool.black]
line-length = 105
target-version = ["py311"]
preview = true

[tool.ruff]
line-length = 105
src = ["src", "tests"]
lint.select = [
  "B",   # bugbear
  "C90", # mccabe
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8 naming
  "PT",  # pytest style
  "RUF", # ruff
  "S",   # bandit
  "SIM", # simplify
  "UP",  # pyupgrade
  "W",   # Warnings
]
lint.typing-modules = ["typings"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"
strict = true
warn_return_any = true
warn_unreachable = true
warn_no_return = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
