[project]
name = "sample"
version = "0.5.0"
description = "Sample Python Application"
readme = "README.md"
license = { text = "CC0 1.0 Universal" }
requires-python = ">=3.13"
authors = [
  { name = "David Creemer" },
]
urls.Homepage = "https://github.com/dcreemer/sample"

dependencies = []

[tool.uv]
prerelease="allow"
dev-dependencies = [
  "bandit>=1.8.6",
  "pip-audit>=2.9.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "mypy>=1.17.1",
]

[tool.pytest.ini_options]
addopts = "--cov=sample --cov-report html --cov-report term"

[tool.ruff]
line-length = 105
src = ["src", "tests"]
lint.select = [
  "B",   # bugbear
  "C4",  # comprehensions
  "C90", # mccabe
  "DTZ", # datetimez
  "E",   # pycodestyle
  "EXE", # executable
  "F",   # pyflakes
  "I",   # isort
  "INT", # gettext
  "N",   # pep8 naming
  "PIE", # pie
  "PLC", # pylint convention
  "PLE", # pylint errors
  "PT",  # pytest style
  "PTH", # use-pathlib
  "Q",   # quotes
  "RSE", # flake8-raise
  "RUF", # ruff
  "S",   # bandit
  "SIM", # simplify
  "UP",  # pyupgrade
  "UP",  # pyupgrade
  "W",   # Warnings
]
lint.typing-modules = ["typings"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["S101"] # do not warn on asserts

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.mypy]
python_version = "3.12"
mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"
strict = true
warn_return_any = true
warn_unreachable = true
warn_no_return = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
